# SWE_lab_1

./: .gitignore  Insertion.sql  README.md  backup.sql
22042860_Mensah_Lab_1/: package-lock.json  package.json
22042860_Mensah_Lab_1/src/app/dashboard/: DashboardClient.tsx  layout.tsx  page.tsx
22042860_Mensah_Lab_1/src/app/login/: Login.tsx  actions.ts
22042860_Mensah_Lab_1/src/app/register/: Signup.tsx  actions.ts
backend/: main.py  models.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: db.ts  layout.tsx
frontend/src/app/components/: Alert.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/dashboard/: DashboardClient.tsx  layout.tsx  page.tsx
frontend/src/app/login/: Login.tsx  actions.ts  page.tsx
frontend/src/app/register/: Signup.tsx  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/test/: page.tsx
